--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,30 +2,33 @@ name: Lint
 
 on:
   push:
-    branches: [master]
+    branches: [ main ]
   pull_request:
-    branches: 
-      - master
-      - 'staging-*'
+    branches: [ main, staging-* ]
+  workflow_dispatch: 
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         python-version: ['3.10']
-        os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: pip cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: lint-pip-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            lint-pip-
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
-          cache-dependency-path: setup.py
 
       - name: Install dependencies
         run: |
