--- a/.github/workflows/test_notebooks.yml
+++ b/.github/workflows/test_notebooks.yml
@@ -1,31 +1,29 @@
 name: Test notebooks
 
 on:
-    schedule:
-      - cron: '0 0 * * 6'  # Run at midnight on Saturdays
     push:
-      branches:
-        - master
+      branches: [ main ]
     pull_request:
-      branches:
-        - master
+      branches: [ main, staging-* ]
     workflow_dispatch:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10']  # 3.8]
+        python-version: ['3.10']
 
     steps:
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v4
 
         - name: pip cache
           uses: actions/cache@v4
           with:
             path: ~/.cache/pip
-            key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+            key: test-notebooks-pip-${{ hashFiles('**/pyproject.toml') }}
+            restore-keys: |
+              test-notebooks-pip-
 
 
         - name: Set up Python ${{ matrix.python-version }}
@@ -36,11 +34,12 @@ jobs:
         - name: Setup Graphviz
           uses: ts-graphviz/setup-graphviz@v1
 
-        - name: Install Python packages from requirements.txt
+        - name: Install Python packages
           run: |
             pip install --upgrade pip
             pip install -e .[dev]
-    
+
         - name: Run Notebook Test
           run: | 
-           ./scripts/test_notebooks.sh
+            ./scripts/test_notebooks.sh    
+    
