updating w/ preliminary preproc splat script

--- a/env.yml
+++ b/env.yml
@@ -1,7 +1,7 @@
 name: splat
 channels:
   - defaults
+  - conda-forge
 dependencies:
-  - python=3.11
-  - pip:
-    - nerfstudio
+  - python=3.10
+  - opencv
