--- a/env.yml
+++ b/env.yml
@@ -3,5 +3,9 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.10
+  - python=3.8
   - opencv
+  - pip:
+    - nerfstudio
+    - git+https://github.com/vuer-ai/feature-splatting
+    - torchtyping==0.1.5 --no-deps
