--- a/env.yml
+++ b/env.yml
@@ -1,11 +1,20 @@
-name: splat
+name: collab-environment
 channels:
   - defaults
   - conda-forge
+  - pytorch
 dependencies:
-  - python=3.8
+  - python=3.10
+  - pytorch=2.1.2
+  - torchvision
+  - torchaudio
+  - cudatoolkit=11.8
+  - numpy
+  - pandas
+  - matplotlib
+  - seaborn
+  - plotly
   - opencv
-  - pip:
-    - nerfstudio
-    - git+https://github.com/vuer-ai/feature-splatting
-    - torchtyping==0.1.5 --no-deps
+  - tqdm
+  - pyyaml
+  - ipykernel
