--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
   "plotly",
   "ultralytics",
   "dotenv",
+  "jupyterlab", 
+  "ipywidgets",
 ]
 
 [project.optional-dependencies]
