--- a/.github/workflows/lint_notebooks.yml
+++ b/.github/workflows/lint_notebooks.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint Notebooks
 
 on:
   push:
@@ -9,23 +9,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         python-version: ['3.10']
+        os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: pip cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: lint-pip-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            lint-pip-
-
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -36,4 +30,4 @@ jobs:
           pip install .[dev]
 
       - name: Lint
-        run: ./scripts/lint.sh
+        run: ./scripts/lint_notebooks.sh
