--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,36 +1,29 @@
-name: Test notebooks
+name: Test
 
 on:
-    push: 
-      branches: [main]
-    pull_request:
-      branches:
-        - main
+  push:
+    branches: [main]
+  pull_request:
+    branches: 
+      - main
 
 jobs:
-  test_notebooks:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ['3.10']  # 3.8]
+        python-version: ['3.10']
         os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v4
       
-      - name: pip cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: test-notebooks-pip-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            test-notebooks-pip-
-
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
+          cache: pip
+          cache-dependency-path: setup.py
 
       - name: Google Auth
         id: auth
@@ -61,9 +54,10 @@ jobs:
             
       - name: Install Python dependencies
         run: |
-            pip install --upgrade pip
-            pip install -e .[dev]
-    
-      - name: Run Notebook Test
-        run: | 
-          ./scripts/test_notebooks.sh
+          python -m pip install --upgrade pip
+          pip install .[dev]
+      
+      - name: Run tests
+        env:
+          MKL_NUM_THREADS: 1
+        run: ./scripts/test.sh
