--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: lint-pip-${{ hashFiles('**/pyproject.toml') }}
+          key: pip-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            lint-pip-
+            pip-
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
