--- a/.github/workflows/test_notebooks.yml
+++ b/.github/workflows/test_notebooks.yml
@@ -22,9 +22,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: test-notebooks-pip-${{ hashFiles('**/pyproject.toml') }}
+          key: pip-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            test-notebooks-pip-
+            pip-
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
