--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
   "dotenv",
   "gcsfs",
   "loguru",
+  "pylibjpeg-libjpeg",
+
 ]
 
 [tool.setuptools]                         # NEW
