--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "collab_env"
 version = "0.0.1"
 description = "Basic scientific computing and deep learning environment with CUDA support"
 readme = "README.rst"
-requires-python = ">=3.8,<=3.11"
+requires-python = ">=3.8,<3.12"
 license = { text = "Apache-2.0" }
 keywords = ["scientific computing", "deep learning", "CUDA", "data processing", "plotting"]
 authors = [{ name = "Basis" }]
@@ -36,6 +36,8 @@ dependencies = [
   "dotenv",
   "gcsfs",
   "loguru",
+  "open3d",
+  "gymnasium",
 ]
 
 [tool.setuptools]                         # NEW
