updating docker and dependencies --> rebuilding image

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: collab-environment
+name: collab-env
 channels:
   - defaults
   - conda-forge
@@ -8,14 +8,15 @@ dependencies:
   - pytorch=2.1.2
   - torchvision
   - torchaudio
-  - cudatoolkit=11.8
+  # - cudatoolkit=11.8
   - numpy
   - pandas
   - matplotlib
   - seaborn
   - plotly
-  - opencv
   - tqdm
   - pyyaml
   - jupyterlab
   - ipywidgets
+  - pip:
+    - opencv-python # Move to pip installation to avoid conflict with installing collab-env
