GNN basic functionality (#12)
* basic GNN functionality.

* conforming to the contributing format

* numpy<2 dep

---------

Co-authored-by: Dmitry Batenkov <dima.batenkov@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,14 @@ dependencies = [
   "dotenv",
   "jupyterlab", 
   "ipywidgets",
-  "dotenv",
   "gcsfs",
   "loguru",
   "pylibjpeg-libjpeg",
   "rfdetr",
   "open3d",
   "gymnasium",
+  "torch_geometric",
+  "ipympl",
 ]
 
 [tool.setuptools]                         # NEW
