--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ classifiers = [
 ]
 
 dependencies = [
-  "torch==2.1.2",
+  "numpy<2",
+  "torch",
   "torchvision",
   "pyro-ppl",
   "numpy",
@@ -38,6 +39,9 @@ dependencies = [
   "loguru",
   "open3d",
   "gymnasium",
+  "scipy",
+  "torch_geometric",
+  "ipympl",
 ]
 
 [tool.setuptools]                         # NEW
