1. Added yaml configuration file and added parameters to __init__ methods. 2. Updated the close() method in BoidsWorldEnv class to destroy the window to make cleaner transition between episodes. 3. Removed a few parameters for RL that aren't being used. 4. Fixed a bug on scaling the mesh scene at the wrong center point.

--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -4,11 +4,15 @@ simulator:
   num_agents: 20
   num_episodes: 1
   num_frames: 10
+  store_video: False
+  show_visualizer: True
+  show_box: True
 
 environment:
   max_dist_from_center: 3
   box_size: 300
   scene_scale: 200.0
+  target_speed: 0.1
 
 agent:
   min_ground_separation: 3.0
