1. Added yaml configuration file and added parameters to __init__ methods. 2. Updated the close() method in BoidsWorldEnv class to destroy the window to make cleaner transition between episodes. 3. Removed a few parameters for RL that aren't being used. 4. Fixed a bug on scaling the mesh scene at the wrong center point. 5. Added output folder creation and writing of parquet files to output folder.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
   "scipy",
   "torch_geometric",
   "ipympl",
+  "pyarrow",
 ]
 
 [tool.setuptools]                         # NEW
