Added several tests for run_boids_simulator.py

--- a/tests/sim_test_config.yaml
+++ b/tests/sim_test_config.yaml
@@ -7,7 +7,7 @@ simulator:
   store_video: False
   show_visualizer: True
   show_box: True
-  run_main_folder: "collab_env/sim/runs"
+  run_main_folder: "tests/sim-runs"
   run_sub_folder_prefix: "boids_sim_run"
 
 environment:
