--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -2,9 +2,9 @@
 simulator:
   walking: False
   num_agents: 20
-  num_episodes: 3
-  num_frames: 5
-  store_video: False
+  num_episodes: 1
+  num_frames: 900
+  store_video: True
   show_visualizer: True
   show_box: True
   run_main_folder: "collab_env/sim/runs"
