--- a/tests/sim_test_config.yaml
+++ b/tests/sim_test_config.yaml
@@ -4,7 +4,7 @@ simulator:
   num_agents: 20
   num_episodes: 3
   num_frames: 5
-  store_video: False
+  store_video: True
   show_visualizer: True
   show_box: True
   run_main_folder: "tests/sim-runs"
