--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -1,12 +1,15 @@
 
 simulator:
-  walking: False
+  walking: True
   num_agents: 20
-  num_episodes: 2
-  num_frames: 20
+  num_episodes: 1
+  num_frames: 25000
   show_box: True
   run_main_folder: "collab_env/sim/runs"
   run_sub_folder_prefix: "boids_sim_run"
+  logfile_prefix: 'logfile'
+  log_level: 'ERROR'
+  logging: False
 
 visuals:
   store_video: True
