--- a/tests/sim_test_config.yaml
+++ b/tests/sim_test_config.yaml
@@ -4,12 +4,18 @@ simulator:
   num_agents: 20
   num_episodes: 3
   num_frames: 5
-  store_video: True
-  show_visualizer: True
   show_box: True
   run_main_folder: "tests/sim-runs"
   run_sub_folder_prefix: "boids_sim_run"
-  log_level: "error"
+  logfile_prefix: 'logfile'
+  log_level: 'ERROR'
+  logging: True
+
+visuals:
+  store_video: True
+  show_visualizer: False
+  width: 1920
+  height: 1027
 
 environment:
   max_dist_from_center: 3
