--- a/tests/sim_test_2_config.yaml
+++ b/tests/sim_test_2_config.yaml
@@ -3,9 +3,9 @@ simulator:
   walking: True
   num_agents: 20
   num_episodes: 1
-  num_frames: 1200
+  num_frames: 5
   show_box: True
-  run_main_folder: "collab_env/sim/runs"
+  run_main_folder: "tests/sim-runs"
   run_sub_folder_prefix: "boids_sim_run"
   logfile_prefix: 'logfile'
   log_level: 'ERROR'
@@ -14,14 +14,14 @@ simulator:
 visuals:
   store_video: True
   show_visualizer: True
-  width: 1920
-  height: 1280
+  width: 1280
+  height: 720
   video_codec: '*mpv4'
-  video_fps: 30
+  video_fps: 20
   video_file_extension: 'mp4'
-  agent_shape: 'sphere'
+  agent_shape: 'cone'
   agent_color: [0, 1, 0]
-  agent_scale: 20.0
+  agent_scale: 2.0
 
 environment:
   max_dist_from_center: 3
