making env in sync w pyproject

--- a/env.yml
+++ b/env.yml
@@ -4,13 +4,14 @@ channels:
   - conda-forge
   - pytorch
 dependencies:
-  - python=3.10
-  - pytorch=2.1.2
+  - python>=3.8,<3.12
+  - torch
   - torchvision
   - torchaudio
-  # - cudatoolkit=11.8
-  - numpy
+  - numpy<2
   - pandas
+  - scipy
+  - scikit-learn
   - matplotlib
   - seaborn
   - plotly
@@ -18,5 +19,17 @@ dependencies:
   - pyyaml
   - jupyterlab
   - ipywidgets
+  - gcsfs
+  - loguru
+  - pip
   - pip:
-    - opencv-python # Move to pip installation to avoid conflict with installing collab-env
+      - opencv-python
+      - pyro-ppl
+      - pyexiftool
+      - ultralytics
+      - dotenv
+      - rfdetr
+      - open3d
+      - gymnasium
+      - torch_geometric
+      - ipympl
