Updated the test folder names.

--- a/tests/sim_test_2_config.yaml
+++ b/tests/sim_test_2_config.yaml
@@ -6,7 +6,7 @@ simulator:
   num_frames: 5
   show_box: True
   run_main_folder: "tests/sim-runs"
-  run_sub_folder_prefix: "boids_sim_run"
+  run_sub_folder_prefix: "boids_sim_run-2"
   logfile_prefix: 'logfile'
   log_level: 'ERROR'
   logging: False
