updating w/ working environment / dependencies for colmap

--- a/env.yml
+++ b/env.yml
@@ -1,11 +1,13 @@
 name: collab-env
 channels:
-  - defaults
-  - conda-forge
   - pytorch
+  - nvidia
+  - conda-forge
+  - defaults
 dependencies:
-  - python>=3.8,<3.12
-  - torch
+  - python>=3.8,<3.11
+  - pytorch>=2.1,<2.4
+  - pytorch-cuda=11.8  # Ensures CUDA 11.8 support
   - torchvision
   - torchaudio
   - numpy<2
@@ -19,17 +21,20 @@ dependencies:
   - pyyaml
   - jupyterlab
   - ipywidgets
-  - gcsfs
-  - loguru
   - pip
   - pip:
       - opencv-python
       - pyro-ppl
       - pyexiftool
       - ultralytics
-      - dotenv
+      - python-dotenv
+      - gcsfs
+      - loguru
+      - pylibjpeg-libjpeg
       - rfdetr
       - open3d
       - gymnasium
       - torch_geometric
       - ipympl
+      - pycolmap==0.4.0  # pin here otherwise there's a mismatch with nerfstudio
+      - pyvista
