needs to match compiled COLMAP between collab splats and env

--- a/env.yml
+++ b/env.yml
@@ -36,5 +36,5 @@ dependencies:
       - gymnasium
       - torch_geometric
       - ipympl
-      - pycolmap==0.4.0  # pin here otherwise there's a mismatch with nerfstudio
+      - pycolmap
       - pyvista
