--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -3,16 +3,17 @@ simulator:
   walking: False
   num_agents: 40
   num_episodes: 1
-  num_frames: 2000
+  num_frames: 4000
   show_box: True
   run_main_folder: "collab_env/sim/runs"
   run_sub_folder_prefix: "boids_sim_run"
   logfile_prefix: 'logfile'
-  log_level: 'ERROR'
+  log_level: 'DEBUG'
   logging: False
+  log_functions: ['simpleBoidsAction']
 
 visuals:
-  store_video: True
+  store_video: False
   show_visualizer: True
   width: 1920
   height: 1280
@@ -30,29 +31,30 @@ environment:
   scene_scale: 300.0
   scene_position: [250, 20, 250]
   target_speed: 0.0
-  target_creation_time: 3000
+  target_creation_time: 2000
 
 agent:
-  min_ground_separation: 3.0
-  min_separation: 4.0
+  min_ground_separation: 5.0
+  min_separation: 20.0
   neighborhood_dist: 80.0
-  separation_weight: 3.0
-  alignment_weight: 0.5
+  separation_weight: 15.0
+  alignment_weight: 1.0
   cohesion_weight: 0.1
   ground_weight: 0.0
-  target_weight: 0.3
-  max_speed: 5.0
-  min_speed: 1.0
-  max_force: 0.1
+  target_weight: 0.001
+  max_speed: 0.5
+  min_speed: 0.1
+  max_force: 0.01
   mean_init_velocity: 0.0
-  variance_init_velocity: 0.5
+  variance_init_velocity: 0.2
 
 meshes:
-    mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
+    mesh_scene: ''
+    # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
     # mesh_scene: 'meshes/query-tree.ply'
-    scene_angle: [-90.0, 0.0, 0.0]
+    # scene_angle: [-90.0, 0.0, 0.0]
     # mesh_scene: 'meshes/example_mesh.ply'
-    #scene_angle: [-10.0, 0.0, -115.0]
+    scene_angle: [-10.0, 0.0, -115.0]
 
 files:
     output_folder_prefix: 'boids_sim_runs'
