--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -1,15 +1,20 @@
 
 simulator:
-  walking: False
-  num_agents: 40
+  walking: True
+  num_agents: 20
+  num_general_targets: 1
+  num_ground_targets: 0
   num_episodes: 1
-  num_frames: 4000
+  num_frames: 5000
+  target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
   show_box: True
   run_main_folder: "collab_env/sim/runs"
   run_sub_folder_prefix: "boids_sim_run"
+
+logging:
   logfile_prefix: 'logfile'
   log_level: 'DEBUG'
-  logging: False
+  logging: True
   log_functions: ['simpleBoidsAction']
 
 visuals:
@@ -31,29 +36,28 @@ environment:
   scene_scale: 300.0
   scene_position: [250, 20, 250]
   target_speed: 0.0
-  target_creation_time: 2000
 
 agent:
   min_ground_separation: 5.0
   min_separation: 20.0
   neighborhood_dist: 80.0
-  separation_weight: 15.0
+  separation_weight: 5.0
   alignment_weight: 1.0
-  cohesion_weight: 0.1
+  cohesion_weight: 0.5
   ground_weight: 0.0
-  target_weight: 0.001
-  max_speed: 0.5
+  target_weight: 1.0
+  max_speed: 1.0
   min_speed: 0.1
-  max_force: 0.01
+  max_force: 0.1
   mean_init_velocity: 0.0
-  variance_init_velocity: 0.2
+  variance_init_velocity: 0.5
 
 meshes:
-    mesh_scene: ''
+    # mesh_scene: ''
     # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
     # mesh_scene: 'meshes/query-tree.ply'
     # scene_angle: [-90.0, 0.0, 0.0]
-    # mesh_scene: 'meshes/example_mesh.ply'
+    mesh_scene: 'meshes/example_mesh.ply'
     scene_angle: [-10.0, 0.0, -115.0]
 
 files:
