--- a/tests/sim_test_2_config.yaml
+++ b/tests/sim_test_2_config.yaml
@@ -4,12 +4,16 @@ simulator:
   num_agents: 20
   num_episodes: 1
   num_frames: 5
+  target_creation_time: 2000
   show_box: True
   run_main_folder: "tests/sim-runs"
   run_sub_folder_prefix: "boids_sim_run-2"
+
+logging:
   logfile_prefix: 'logfile'
   log_level: 'ERROR'
   logging: False
+  log_functions: []
 
 visuals:
   store_video: True
@@ -22,6 +26,7 @@ visuals:
   agent_shape: 'cone'
   agent_color: [0, 1, 0]
   agent_scale: 2.0
+  target_scale: 2.0
 
 environment:
   max_dist_from_center: 3
@@ -40,6 +45,7 @@ agent:
   ground_weight: 1.0
   target_weight: 0.0001
   max_speed: 0.8
+  min_speed: 0.1
   max_force: 0.1
   mean_init_velocity: 1.0
   variance_init_velocity: 0.2
