--- a/tests/sim_test_config.yaml
+++ b/tests/sim_test_config.yaml
@@ -4,12 +4,17 @@ simulator:
   num_agents: 20
   num_episodes: 3
   num_frames: 5
+  target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
   show_box: True
   run_main_folder: "tests/sim-runs"
   run_sub_folder_prefix: "boids_sim_run-1"
+
+
+logging:
   logfile_prefix: 'logfile'
   log_level: 'ERROR'
   logging: True
+  log_functions: []
 
 visuals:
   store_video: True
@@ -22,6 +27,7 @@ visuals:
   agent_shape: 'sphere'
   agent_color: [ 0, 1, 0 ]
   agent_scale: 20.0
+  target_scale: 2.0
 
 environment:
   max_dist_from_center: 3
@@ -29,6 +35,7 @@ environment:
   scene_scale: 200.0
   target_speed: 0.1
   scene_position: [175, 20, 175]
+
 
 agent:
   min_ground_separation: 3.0
@@ -40,6 +47,7 @@ agent:
   ground_weight: 1.0
   target_weight: 0.0
   max_speed: 0.8
+  min_speed: 0.1
   max_force: 0.1
   mean_init_velocity: 1.0
   variance_init_velocity: 0.2
