--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -1,11 +1,12 @@
 
 simulator:
-  walking: True
+  walking: False
   num_agents: 20
-  num_general_targets: 1
-  num_ground_targets: 0
+  num_targets: 1
+  num_ground_targets: 1
+  moving_targets: False
   num_episodes: 1
-  num_frames: 5000
+  num_frames: 1000
   target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
   show_box: True
   run_main_folder: "collab_env/sim/runs"
@@ -41,11 +42,11 @@ agent:
   min_ground_separation: 5.0
   min_separation: 20.0
   neighborhood_dist: 80.0
-  separation_weight: 5.0
+  separation_weight: 15.0
   alignment_weight: 1.0
   cohesion_weight: 0.5
   ground_weight: 0.0
-  target_weight: 1.0
+  target_weight: [0.1]
   max_speed: 1.0
   min_speed: 0.1
   max_force: 0.1
