--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -6,7 +6,7 @@ simulator:
   num_ground_targets: 2
   moving_targets: False
   num_episodes: 1
-  num_frames: 1000
+  num_frames: 1
   target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
   show_box: True
   run_main_folder: "collab_env/sim/runs"
@@ -15,8 +15,8 @@ simulator:
 logging:
   logfile_prefix: 'logfile'
   log_level: 'DEBUG'
-  logging: True
-  log_functions: ['simpleBoidsAction']
+  logging: False
+  log_functions: ['compute_target_distances']
 
 visuals:
   store_video: False
