--- a/tests/sim_test_config.yaml
+++ b/tests/sim_test_config.yaml
@@ -2,6 +2,8 @@
 simulator:
   walking: True
   num_agents: 20
+  num_targets: 5
+  num_ground_targets: 2
   num_episodes: 3
   num_frames: 5
   target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
@@ -45,7 +47,7 @@ agent:
   alignment_weight: 0.5
   cohesion_weight: 0.1
   ground_weight: 1.0
-  target_weight: 0.0
+  target_weight: [1.0, 1.0, 1.0, 1.0, 1.0]
   max_speed: 0.8
   min_speed: 0.1
   max_force: 0.1
