--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -9,7 +9,8 @@ simulator:
   num_frames: 1
   target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
   show_box: True
-  run_main_folder: "collab_env/sim/runs"
+  # run_main_folder: "collab_env/sim/runs"
+  run_main_folder: "sim-output"
   run_sub_folder_prefix: "boids_sim_run"
 
 logging:
@@ -62,4 +63,4 @@ meshes:
     scene_angle: [-10.0, 0.0, -115.0]
 
 files:
-    output_folder_prefix: 'boids_sim_runs'
+    output_folder_prefix: 'boids_sim_runs' # which of these am I using?
