--- a/tests/sim_test_1_config.yaml
+++ b/tests/sim_test_1_config.yaml
@@ -8,7 +8,7 @@ simulator:
   num_frames: 5
   target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
   show_box: True
-  run_main_folder: "tests/sim-runs"
+  run_main_folder: "sim-output/tests-sim-runs"
   run_sub_folder_prefix: "boids_sim_run-1"
 
 
