Allows for initial target positions to be specified rather than random. Tested with 2 targets, one ground, one in the air.

--- a/tests/sim_test_2_config.yaml
+++ b/tests/sim_test_2_config.yaml
@@ -58,6 +58,7 @@ agent:
   init_range_low: 0.2
   init_range_high: 0.7
   height_init_max: 750
+  random_walk: False
 
 meshes:
     # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
