--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -2,24 +2,19 @@
 simulator:
   walking: False
   num_agents: 20
-  num_targets: 1
-  num_ground_targets: 1
+  num_targets: 2
+  num_ground_targets: 2
   extract_submesh_target: False
   moving_targets: False
   num_episodes: 1
-  num_frames: 1000
-  target_creation_time: 350 # min is 1, which creates the target at the beginning of the episode.
+  num_frames: 700
+  target_creation_time: 200 # min is 1, which creates the target at the beginning of the episode.
   show_box: False
   # run_main_folder: "collab_env/sim/runs"
   run_main_folder: "sim-output"
   run_sub_folder_prefix: "boids_sim_run"
   show_trajectories: True
 
-logging:
-  logfile_prefix: 'logfile'
-  log_level: 'DEBUG'
-  logging: True
-  log_functions: []
 
 visuals:
   store_video: True
@@ -32,7 +27,7 @@ visuals:
   agent_shape: 'sphere'
   agent_color: [1, 0, 0]
   agent_scale: 5.0
-  target_scale: 2.0
+  target_scale: 8.0
 
 environment:
   max_dist_from_center: 3
@@ -43,6 +38,7 @@ environment:
   init_range_low: 0.4
   init_range_high: 0.6
   height_init_max: 500
+  target_position: [[750, 20, 750], [375, 200, 100]]
 
 agent:
   min_ground_separation: 5.0
@@ -61,20 +57,26 @@ agent:
   init_range_low: 0.4
   init_range_high: 0.6
   height_init_max: 750
-  random_walk: True
+  random_walk: False
 
 meshes:
     # mesh_scene: ''
     # mesh_scene: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
     # scene_angle: [0.0, 0.0, 0.0]
-    # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
+    mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
     # mesh_scene: 'meshes/query-tree.ply'
-    # scene_angle: [-90.0, 0.0, 0.0]
-    # scene_angle: [0.0, 0.0, 0.0]
-    mesh_scene: 'meshes/example_mesh.ply'
-    scene_angle: [-10.0, 0.0, -115.0]
+    scene_angle: [-90.0, 0.0, 0.0]
+    #scene_angle: [0.0, 0.0, 0.0]
+    #mesh_scene: 'meshes/example_mesh.ply'
+    #scene_angle: [-10.0, 0.0, -115.0]
 
 files:
     output_folder_prefix: 'boids_sim_runs' # which of these am I using?
     trajectory_file:  'episode-0-completed-20250806-151621.parquet'
     trajectory_folder: 'sim-output/boids_sim_run-started-20250806-151619'
+
+logging:
+  logfile_prefix: 'logfile'
+  log_level: 'DEBUG'
+  logging: True
+  log_functions: []
