updated requirements for alignment (#20)
* making env in sync w pyproject

* updating w/ working environment / dependencies for colmap

* needs to match compiled COLMAP between collab splats and env

* adding in scikit image

* adding in lpips

* updating readme w/ clearer and organized instructions:

* updating readme w/ clearer and organized instructions

* making things in line w/ all builds

* additional pyvista requirement for viz

* more pyvista requirements

* clarified the note about CUDA not being REQUIRED

---------

Co-authored-by: Dmitry Batenkov <dimkab@users.noreply.github.com>

--- a/env.yml
+++ b/env.yml
@@ -1,16 +1,18 @@
 name: collab-env
 channels:
-  - defaults
-  - conda-forge
   - pytorch
+  - conda-forge
+  - defaults
 dependencies:
-  - python=3.10
-  - pytorch=2.1.2
+  - python>=3.8,<3.11
+  - pytorch>=2.1,<2.4
   - torchvision
   - torchaudio
-  # - cudatoolkit=11.8
-  - numpy
+  - numpy<2
   - pandas
+  - scipy
+  - scikit-learn
+  - scikit-image
   - matplotlib
   - seaborn
   - plotly
@@ -18,5 +20,24 @@ dependencies:
   - pyyaml
   - jupyterlab
   - ipywidgets
+  - pip
   - pip:
-    - opencv-python # Move to pip installation to avoid conflict with installing collab-env
+      - opencv-python
+      - pyro-ppl
+      - pyexiftool
+      - ultralytics
+      - python-dotenv
+      - gcsfs
+      - loguru
+      - pylibjpeg-libjpeg
+      - rfdetr
+      - open3d
+      - gymnasium
+      - torch_geometric
+      - ipympl
+      - pycolmap
+      - pyvista
+      - trame
+      - trame-vtk
+      - trame-vuetify
+      - lpips
