--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
   "scipy",
   "torch_geometric",
   "ipympl",
+  "panel",
+  "param",
 ]
 
 [tool.setuptools]                         # NEW
@@ -76,6 +78,7 @@ dev = [
   "black",
   "isort",
   "flake8>=6.0",
+  "types-PyYAML",
 ]
 
 [build-system]
