--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -27,7 +27,7 @@ visuals:
   video_fps: 30
   video_file_extension: 'mp4'
   agent_shape: 'sphere'
-  agent_color: [0, 0, 1]
+  agent_color: [1, 0, 0]
   agent_scale: 5.0
   target_scale: 0.5
 
@@ -50,6 +50,9 @@ environment:
 
 agent:
   min_ground_separation: 5.0
+  ground_avoidance_mean: 1.0
+  ground_avoidance_variance: 0.01
+  ground_avoidance_max_speed: 0.1
   min_separation: 20.0
   neighborhood_dist: 80.0
   separation_weight: 15.0
@@ -68,7 +71,7 @@ agent:
   height_range_high: 1.0
   height_init_min: 200
   height_init_max: 500
-  random_walk: True
+  random_walk: False
 
 meshes:
     # mesh_scene: ''
@@ -95,4 +98,4 @@ logging:
   logfile_prefix: 'logfile'
   log_level: 'DEBUG'
   logging: True
-  log_functions: ['save_image_to_file']
+  log_functions: ['init_trajectory_lines']
