--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -1,5 +1,6 @@
 
 simulator:
+  seed: [342] # one seed required for each episode
   walking: False
   num_agents: 20
   num_targets: 1
@@ -59,7 +60,7 @@ agent:
   alignment_weight: 1.0
   cohesion_weight: 0.5
   ground_weight: 0.0
-  target_weight: [0.001]
+  target_weight: [0.01]
   max_speed: 1.0
   min_speed: 0.1
   max_force: 0.1
